@@ -7,6 +7,7 @@ import com.pragma.capacidad_service.domain.model.command.CapabilityPageCommand;
 import com.pragma.capacidad_service.domain.service.TechnologyDetailService;
 import com.pragma.capacidad_service.domain.spi.ICapabilityPersistencePort;
 import com.pragma.capacidad_service.domain.validation.capability.DomainCapabilityValidator;
+import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
@@ -18,6 +19,7 @@ import reactor.test.StepVerifier;
 import java.util.List;
 
 import static org.mockito.Mockito.doNothing;
+import static org.mockito.Mockito.doThrow;
 import static org.mockito.Mockito.when;
 
 @ExtendWith(MockitoExtension.class)
@@ -76,17 +78,17 @@ class CapabilityRetrieveUseCaseTest {
 
         StepVerifier.create(capabilityRetrieveUseCase.getCapabilities(command, token))
                 .assertNext(result -> {
-                    org.junit.jupiter.api.Assertions.assertEquals(1, result.content().size());
-                    org.junit.jupiter.api.Assertions.assertEquals("Backend", result.content().get(0).getName());
-                    org.junit.jupiter.api.Assertions.assertEquals(2, result.content().get(0).getTechnologies().size());
-                    org.junit.jupiter.api.Assertions.assertEquals("Java", result.content().get(0).getTechnologies().get(0).getName());
-                    org.junit.jupiter.api.Assertions.assertEquals("Spring Boot", result.content().get(0).getTechnologies().get(1).getName());
-                    org.junit.jupiter.api.Assertions.assertEquals(0, result.page());
-                    org.junit.jupiter.api.Assertions.assertEquals(10, result.size());
-                    org.junit.jupiter.api.Assertions.assertEquals(1, result.totalElements());
-                    org.junit.jupiter.api.Assertions.assertEquals(1, result.totalPages());
-                    org.junit.jupiter.api.Assertions.assertTrue(result.first());
-                    org.junit.jupiter.api.Assertions.assertTrue(result.last());
+                    Assertions.assertEquals(1, result.content().size());
+                    Assertions.assertEquals("Backend", result.content().getFirst().getName());
+                    Assertions.assertEquals(2, result.content().getFirst().getTechnologies().size());
+                    Assertions.assertEquals("Java", result.content().getFirst().getTechnologies().get(0).getName());
+                    Assertions.assertEquals("Spring Boot", result.content().getFirst().getTechnologies().get(1).getName());
+                    Assertions.assertEquals(0, result.page());
+                    Assertions.assertEquals(10, result.size());
+                    Assertions.assertEquals(1, result.totalElements());
+                    Assertions.assertEquals(1, result.totalPages());
+                    Assertions.assertTrue(result.first());
+                    Assertions.assertTrue(result.last());
                 })
                 .verifyComplete();
     }
@@ -98,7 +100,7 @@ class CapabilityRetrieveUseCaseTest {
 
         RuntimeException exception = new RuntimeException("error validando paginación");
 
-        org.mockito.Mockito.doThrow(exception)
+        doThrow(exception)
                 .when(domainCapabilityValidator)
                 .validatePagination(command);
 
@@ -191,10 +193,137 @@ class CapabilityRetrieveUseCaseTest {
 
         StepVerifier.create(capabilityRetrieveUseCase.getCapabilities(command, token))
                 .assertNext(result -> {
-                    org.junit.jupiter.api.Assertions.assertTrue(result.content().isEmpty());
-                    org.junit.jupiter.api.Assertions.assertEquals(0, result.totalElements());
-                    org.junit.jupiter.api.Assertions.assertEquals(0, result.totalPages());
+                    Assertions.assertTrue(result.content().isEmpty());
+                    Assertions.assertEquals(0, result.totalElements());
+                    Assertions.assertEquals(0, result.totalPages());
                 })
                 .verifyComplete();
+    }
+
+    @Test
+    void shouldRetrieveCapabilitiesByIdsSuccessfully() {
+        String token = "token";
+        List<Long> ids = List.of(1L, 2L);
+
+        Capability capability1 = Capability.builder()
+                .id(1L)
+                .name("Backend")
+                .description("Capacidad backend")
+                .technologies(List.of(
+                        Technology.builder().id(1L).build(),
+                        Technology.builder().id(2L).build()
+                ))
+                .build();
+
+        Capability capability2 = Capability.builder()
+                .id(2L)
+                .name("Frontend")
+                .description("Capacidad frontend")
+                .technologies(List.of(
+                        Technology.builder().id(3L).build()
+                ))
+                .build();
+
+        List<Technology> enrichedTechnologies1 = List.of(
+                Technology.builder().id(1L).name("Java").build(),
+                Technology.builder().id(2L).name("Spring Boot").build()
+        );
+
+        List<Technology> enrichedTechnologies2 = List.of(
+                Technology.builder().id(3L).name("Angular").build()
+        );
+
+        when(iCapabilityPersistencePort.findByIds(ids))
+                .thenReturn(reactor.core.publisher.Flux.just(
+                        capability1,
+                        capability2
+                ));
+
+        when(technologyDetailService.enrich(
+                capability1.getTechnologies(),
+                token
+        )).thenReturn(Mono.just(enrichedTechnologies1));
+
+        when(technologyDetailService.enrich(
+                capability2.getTechnologies(),
+                token
+        )).thenReturn(Mono.just(enrichedTechnologies2));
+
+        StepVerifier.create(
+                        capabilityRetrieveUseCase.retrieveByIds(ids, token)
+                )
+                .assertNext(result -> {
+                    Assertions.assertEquals(
+                            1L,
+                            result.getId()
+                    );
+
+                    Assertions.assertEquals(
+                            "Backend",
+                            result.getName()
+                    );
+
+                    Assertions.assertEquals(
+                            2,
+                            result.getTechnologies().size()
+                    );
+
+                    Assertions.assertEquals(
+                            "Java",
+                            result.getTechnologies().get(0).getName()
+                    );
+
+                    Assertions.assertEquals(
+                            "Spring Boot",
+                            result.getTechnologies().get(1).getName()
+                    );
+                })
+                .assertNext(result -> {
+                    Assertions.assertEquals(
+                            2L,
+                            result.getId()
+                    );
+
+                    Assertions.assertEquals(
+                            "Frontend",
+                            result.getName()
+                    );
+
+                    Assertions.assertEquals(
+                            1,
+                            result.getTechnologies().size()
+                    );
+
+                    Assertions.assertEquals(
+                            "Angular",
+                            result.getTechnologies().getFirst().getName()
+                    );
+                })
+                .verifyComplete();
+    }
+
+    @Test
+    void shouldPropagateErrorWhenRetrieveByIdsFails() {
+        String token = "token";
+        List<Long> ids = List.of(1L, 2L);
+
+        RuntimeException exception =
+                new RuntimeException("error consultando capacidades por ids");
+
+        when(iCapabilityPersistencePort.findByIds(ids))
+                .thenReturn(
+                        reactor.core.publisher.Flux.error(exception)
+                );
+
+        StepVerifier.create(
+                        capabilityRetrieveUseCase.retrieveByIds(ids, token)
+                )
+                .expectErrorMatches(error ->
+                        error instanceof RuntimeException &&
+                                error.getMessage().equals(
+                                        "error consultando capacidades por ids"
+                                )
+                )
+                .verify();
     }
 }
